# VersiON

./: LICENSE  README.md
cmake/: VersionBuildFunctions.cmake
config/: version_patterns.ini
cpp/: README.md
cpp/cmake/: VersionBuildFunctions.cmake
cpp/example/src/: main.cpp
cpp/src/version/: Build.cpp.in  Build.h
cpp/src/version/pattern/: Revision.cpp  Revision.hpp  Semantic.cpp  Semantic.hpp
example/: CMakeLists.txt
example/src/: main.cpp
python/: .gitignore  get_build_version.py  release.py
python/src/version/: VersiON.py
python/test/: test_Semantic.py  test_VersiON.py
python/version/: VersiON.py  acme.py  git_help.py
python/version/style/: VersionComponentSemanticStyle.py  VersionRevisionStyle.py  VersionSemanticStyle.py  VersionStyle.py  VersionStyleFactory.py
src/version/: Build.cpp.in  Build.h
tests/cucumber/semantic/: basic.feature
tool/: bump_style.py  commit_weight.py  common.py  get_build_version.py  release.py  versioning.py
